[package]
name = "lrapiut"
version = "1.0.6"
edition = "2021"
authors = ["Jonas CHARRIER (EarthKiii) <jonas.charrier1@gmail.com>"]
repository = "https://github.com/EarthKiii/lrapiut/"
homepage = "https://github.com/EarthKiii/lrapiut/"
license = "ISC"
description = "a rust package api for L'IUT La Rochelle services"
include = [
    "src/lib.rs",
    "Cargo.toml",
]
exclude = ["index.node"]

[lib]
name = "lrapiut"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
notes = []
gpu = []

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[dependencies]
reqwest = { version = "0.11.16", features = ["cookies", "json"] }
reqwest_cookie_store = "0.6.0"
serde_json = "1.0"
tl = "0.7.7"
async-trait = "0.1.73"
napi = { version = "2.12.2", default-features = false, features = ["napi4", "serde-json", "tokio_rt"] }
tokio = { version = "1.32.0", features = ["full"] }
napi-derive = "2.12.2"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
panic = "abort"

[dev-dependencies]
lrapiut = { path = ".", features = ["notes"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]