[package]
name = "lrapiut"
version = "1.0.9"
edition = "2021"
authors = ["Jonas CHARRIER (EarthKiii) <jonas.charrier1@gmail.com>"]
repository = "https://github.com/EarthKiii/lrapiut/"
homepage = "https://github.com/EarthKiii/lrapiut/"
license = "ISC"
description = "a rust package api for L'IUT La Rochelle services"
include = [
    "build.rs",
    "src/**/*",
    "Cargo.toml"
]
exclude = ["index.node"]

[lib]
name = "lrapiut"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
notes = []
gpu = []

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10.70", features = ["vendored"] }

[dependencies]
reqwest = { version = "0.12.12", features = ["cookies", "json"] }
reqwest_cookie_store = "0.8.0"
serde_json = "1.0.138"
tl = "0.7.8"
async-trait = "0.1.86"
napi = { version = "2.16.15", default-features = false, features = ["napi4", "serde-json", "tokio_rt"] }
tokio = { version = "1.43.0", features = ["full"] }
napi-derive = "2.16.13"

[build-dependencies]
napi-build = "2.1.4"

[profile.release]
lto = true
strip = "symbols"
panic = "abort"

[dev-dependencies]
lrapiut = { path = ".", features = ["notes"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]